# fsot-2.1-llm

./: .gitignore  README.md  pyproject.toml  requirements.txt
docs/: FSOT_INTERFERENCE_ANALYSIS.md  FSOT_LLM_ARCHITECTURE.md  FSOT_MATH_REGRESSION_POSTMORTEM.md  FSOT_MEMORY_HIERARCHY.md  FSOT_OPEN_RESEARCH_SYNTHESIS.md  FSOT_ORGANISM_STIMULUS.md  FSOT_REFINE_PROTOCOL.md  FSOT_SUPERPOSITION_DEPTH.md  FSOT_VERSIONING.md  FSOT_VISUAL_SPECTRUM.md
fsot_core/cpp/include/: fsot_scalar.hpp
fsot_core/cpp/src/: hello_fsot.cpp
fsot_core/python/: fsot_bridge.py
fsot_core/rust/: Cargo.toml
fsot_core/rust/src/: lib.rs
llm/benchmarks/: parity_scaffold.json  spectrum_smoke.json
llm/configs/: benchmark_domain_map.yaml  observers.yaml  small_model.yaml
llm/data/curriculum/: fsot_curriculum.meta.json  fsot_stimulus_curriculum.meta.json
llm/kaggle_pathway_package_meta/: dataset-metadata.json
llm/kaggle_public_benchmark/: fsot_public_benchmark.py  kernel-metadata.json
llm/kaggle_routed_benchmark/: fsot_routed_public_benchmark.py  kernel-metadata.json
llm/models/full_ft/: registry.json
llm/python/fsot_llm/: __init__.py  archive_verify.py  curriculum.py  domain_routing.py  eval_suite.py  export_release.py  external_data.py  hello_fsot.py  (+19 more)
llm/scripts/: KAGGLE_PUBLIC_BENCHMARK.md  LEADERBOARD_SUBMIT.md  publish_kaggle_release.ps1  run_lm_eval_release.ps1  run_lm_eval_release.sh
scripts/: _patch_sota_route.py  _wire_domain_routing.py  activate.ps1  bootstrap.ps1  build_cpp.ps1  parity_report.py  refine_loop.ps1  set_env.ps1
tests/python/: test_fsot_bridge.py
