[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fsot-llm"
version = "0.1.0"
description = "FSOT 2.1 large language models — fluid spacetime as intrinsic architecture"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Damian Arthur Palumbo" }]
dependencies = [
  "numpy>=1.26",
  "mpmath>=1.3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
ml = [
  "torch>=2.2",
  "transformers>=4.44",
  "accelerate>=0.33",
  "safetensors>=0.4",
  "huggingface_hub>=0.24",
]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
where = ["llm/python"]

[tool.pytest.ini_options]
pythonpath = ["llm/python", "fsot_core/python"]
testpaths = ["tests/python"]
